# trawler

./: .env.example  .gitignore  High Level Concept.txt  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: polymarket-api.mdc  project-context.mdc  python-conventions.mdc  scoring.mdc
src/trawler/: cli.py  config.py  db.py
src/trawler/generation/: review.py  scripts.py
src/trawler/ingestion/: polymarket.py
src/trawler/scoring/: engine.py  llm_signals.py  signals.py
